<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp">


    <Spinner
        android:id="@+id/categoriesSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:entries="@array/categories"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:prompt="@string/choose_category"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/descriptionEt" />

    <EditText
        android:id="@+id/descriptionEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/upload"
        app:layout_constraintTop_toBottomOf="@id/descriptionEt" />

</androidx.constraintlayout.widget.ConstraintLayout>